[metadata]
name = Xie
version = 0.1.4
author = Xrloong Wang
author_email = xrloong@gmail.com
description = 試圖以筆劃描述漢字的函式庫
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xrloong/Xie
project_urls =
    Bug Tracker = https://github.com/xrloong/Xie/issues
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

